--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.1",
     "gulp-less": "^3.1.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-uglify": "^1.5.3",
     "gulp-useref": "^3.1.0"
   }
