--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-if": "^2.0.1",
     "gulp-less": "^3.1.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-strip-comments": "^2.4.3",
     "gulp-uglify": "^1.5.3",
     "gulp-useref": "^3.1.0"
   }
